<package format="2">
  <name>pid_control</name>
  <version>1.0.0</version>
  <description>PID control package</description>

  <maintainer email="liaoluweillw@163.com">lkw</maintainer>

  <author>llw</author>

  <license>  BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>

</package>
